# flo

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  README.md  RESEARCH-webrtc-transport.md  audit.toml  deny.toml
.agents/skills/setup-matt-pocock-skills/: SKILL.md
.agents/skills/to-tickets/: SKILL.md
.github/workflows/: auto-approve-docs.yml  ci.yml  publish.yml  security.yml
.scratch/: research-zenoh-loopback.md
.scratch/client-container-arch-map/: map.md
.scratch/client-container-arch-map/issues/: 01-device-access.md  01-device-findings.md  02-rule-engine-design.md  03-daemonset-skeleton.md  04-observability-notes.md  04-observability.md
.scratch/industrial-robotics/: problem-space.md
.scratch/local-demo-map/: map.md
.scratch/local-demo-map/issues/: 01-zenoh-loopback.md  02-simulate-source.md  03-default-demo.md  04-getting-started.md
.scratch/transport-protocol-map/: map.md
.scratch/transport-protocol-map/issues/: 01-zenoh-findings.md  01-zenoh-topology-and-crate.md  02-webrtc-crate.md  02-webrtc-findings.md  03-lock-zenoh-topology.md  04-ferrous-build-spike.md
.scratch/webrtc-signaling-map/: map.md
.scratch/webrtc-signaling-map/issues/: 01-signal-schema.md  02-video-plumbing-findings.md  02-video-plumbing.md  03-connectivity.md  04-signaling-skeleton.md
.scratch/webrtc-signaling-map/research/: 02-video-plumbing-findings.md  03-connectivity-findings.md
deploy/: flo-client-daemonset.yaml
docs/: RULES.md
docs/agents/: issue-tracker.md  notes.md  project-id.txt
docs/superpowers/: prd-flo-engine.md
docs/superpowers/plans/: 2026-07-18-repo-readme-ci.md  (+4 more)
examples/: custom_rules.rs  mesh_demo.rs  semantic_rules.rs  video_peer.rs
examples/rules/: hrc-cell.toml  sample.toml  warehouse-fleet.toml
scripts/: setup-dev.sh
src/: auth.rs  cli.rs  codec.rs  common.rs  config.rs  demo.rs  device.rs  engine.rs  health.rs  lib.rs  main.rs  media.rs  mesh.rs  mutation.rs  production.rs  registration.rs  registry.rs  rules.rs  semantic.rs  server.rs  signaling.rs  simulate.rs  transport.rs  video.rs
tests/: core_loop.rs  examples_build.rs  help_text.rs  registry_test.rs  rule_check.rs  safe_state.rs  semantic_compile.rs
tests/fixtures/: minimal-client-config.toml  minimal-server-config.toml
(+8 files in other folders)
