[package]
name = "flo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
webrtc = "0.17.1"
zenoh = { version = "1.9.0", features = ["unstable"] }

bytes = "1"

[dependencies.gstreamer]
version = "0.25"
optional = true

[dependencies.gstreamer-app]
version = "0.25"
optional = true

[dependencies.gstreamer-video]
version = "0.25"
optional = true

[features]
default = []
media = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]
