[package]
name = "flo-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"

description = "Kubernetes robot orchestration in safe Rust with a peer-to-peer WebRTC video pipeline."
license = "Apache-2.0"
repository = "https://github.com/Florina-Alfred/flo"
homepage = "https://github.com/Florina-Alfred/flo"
documentation = "https://github.com/Florina-Alfred/flo#readme"
readme = "README.md"
keywords = ["robotics", "kubernetes", "webrtc", "video", "rust"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
axum = "0.8.9"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
webrtc = { version = "0.17.1", optional = true }
zenoh = { version = "1.9.0", features = ["unstable"] }

bytes = "1"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[dependencies.gstreamer]
version = "0.25"
optional = true

[dependencies.gstreamer-app]
version = "0.25"
optional = true

[dependencies.gstreamer-video]
version = "0.25"
optional = true

[features]
default = []
media = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video", "dep:webrtc"]

# The published crate is `flo-rs`, but the CLI binary users run stays `flo`.
[[bin]]
name = "flo"
path = "src/main.rs"
